Fix icons widths and position. Now shows on card overlap as well.

--- a/client/public/css/styles.css
+++ b/client/public/css/styles.css
@@ -79,6 +79,21 @@
   color:green;
 }
 
+.card-small {
+  min-width: 250px;
+}
+
+.container .ng-scope {
+  width: 100%;
+}
+
+.material-icons {
+  font-size: 2em;
+}
+
+/*.icon-edit {
+  max-width: 40px;
+}*/
 /*========create-recipes=========*/
 
 .addButton {
@@ -101,15 +116,6 @@
   font-size:16px;
   position:relative;
   bottom:13px;
-}
-
-/*========dashboard=========*/
-.card-small {
-  min-width: 250px;
-}
-
-.container .ng-scope {
-  width: 100%;
 }
 
 /*========shopping-list=========*/
